# zero2prod

./: Cargo.toml  Dockerfile  commands.md  docker-compose.yml  sqlx-data.json
.cargo/: config.toml
migrations/: 20230721145205_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs  helpers.rs
