[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Erick Mwombeki <mwombekilubere@gmal.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
config = "0.11"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.15"
#env_logger = "0.10.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = "0.1"
thiserror = "1.0.24"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
tracing-actix-web = "0.7.5"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
anyhow = "1.0.40"
rand = { version = "0.8", features = ["std_rng"] }
argon2 = { version = "0.5.1", features = ["std"] }
validator = "0.16"

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
claims = "0.7.0"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"