[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Erick Mwombeki <mwombekilubere@gmal.com>"]
edition = "2021"
description = "A short description of my package"
license = "MIT OR Apache-2.0"

#[registry]
#index = "https://github.com/rust-lang/crates.io-index"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.3.1"}
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = "0.4.15"
#env_logger = "0.10.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = "0.1"
thiserror = "1.0.24"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
tracing-actix-web = "0.7.5"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
anyhow = "1.0.40"
rand = { version = "0.8", features = ["std_rng"] }
argon2 = { version = "0.5.1", features = ["std"] }
validator = "0.16"
unicode-segmentation = "1.7.1"

[dev-dependencies]
once_cell = "1"
claims = "0.7.0"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
linkify = "0.10"
serde_urlencoded = "0.7.1"